templates/Vpc.template.yaml
Resources:
  TheVPC92636AB0:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: VPC/TheVPC
    Metadata:
      aws:cdk:path: VPC/TheVPC/Resource
  TheVPCApplicationSubnet1SubnetA74226FF:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/26
      VpcId:
        Ref: TheVPC92636AB0
      AvailabilityZone: us-east-1a
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: VPC/TheVPC/ApplicationSubnet1
        - Key: aws-cdk:subnet-name
          Value: Application
        - Key: aws-cdk:subnet-type
          Value: Private
    Metadata:
      aws:cdk:path: VPC/TheVPC/ApplicationSubnet1/Subnet
  TheVPCApplicationSubnet1RouteTable0FE2A3D8:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: TheVPC92636AB0
      Tags:
        - Key: Name
          Value: VPC/TheVPC/ApplicationSubnet1
    Metadata:
      aws:cdk:path: VPC/TheVPC/ApplicationSubnet1/RouteTable
  TheVPCApplicationSubnet1RouteTableAssociationBE311466:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: TheVPCApplicationSubnet1RouteTable0FE2A3D8
      SubnetId:
        Ref: TheVPCApplicationSubnet1SubnetA74226FF
    Metadata:
      aws:cdk:path: VPC/TheVPC/ApplicationSubnet1/RouteTableAssociation
  TheVPCApplicationSubnet1DefaultRouteC6DE6E60:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: TheVPCApplicationSubnet1RouteTable0FE2A3D8
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: TheVPCPublicSubnet1NATGatewayC61D892B
    Metadata:
      aws:cdk:path: VPC/TheVPC/ApplicationSubnet1/DefaultRoute
  TheVPCPublicSubnet1Subnet770D4FF2:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.64/26
      VpcId:
        Ref: TheVPC92636AB0
      AvailabilityZone: us-east-1a
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: VPC/TheVPC/PublicSubnet1
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
    Metadata:
      aws:cdk:path: VPC/TheVPC/PublicSubnet1/Subnet
  TheVPCPublicSubnet1RouteTable17DA183D:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: TheVPC92636AB0
      Tags:
        - Key: Name
          Value: VPC/TheVPC/PublicSubnet1
    Metadata:
      aws:cdk:path: VPC/TheVPC/PublicSubnet1/RouteTable
  TheVPCPublicSubnet1RouteTableAssociationE5186D77:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: TheVPCPublicSubnet1RouteTable17DA183D
      SubnetId:
        Ref: TheVPCPublicSubnet1Subnet770D4FF2
    Metadata:
      aws:cdk:path: VPC/TheVPC/PublicSubnet1/RouteTableAssociation
  TheVPCPublicSubnet1DefaultRoute6D26543F:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: TheVPCPublicSubnet1RouteTable17DA183D
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: TheVPCIGWFA25CC08
    DependsOn:
      - TheVPCVPCGWC9B93E30
    Metadata:
      aws:cdk:path: VPC/TheVPC/PublicSubnet1/DefaultRoute
  TheVPCPublicSubnet1EIP4412F690:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
    Metadata:
      aws:cdk:path: VPC/TheVPC/PublicSubnet1/EIP
  TheVPCPublicSubnet1NATGatewayC61D892B:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - TheVPCPublicSubnet1EIP4412F690
          - AllocationId
      SubnetId:
        Ref: TheVPCPublicSubnet1Subnet770D4FF2
      Tags:
        - Key: Name
          Value: VPC/TheVPC/PublicSubnet1
    Metadata:
      aws:cdk:path: VPC/TheVPC/PublicSubnet1/NATGateway
  TheVPCIGWFA25CC08:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: VPC/TheVPC
    Metadata:
      aws:cdk:path: VPC/TheVPC/IGW
  TheVPCVPCGWC9B93E30:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: TheVPC92636AB0
      InternetGatewayId:
        Ref: TheVPCIGWFA25CC08
    Metadata:
      aws:cdk:path: VPC/TheVPC/VPCGW
  TheVPCVpnGateway97BC18B3:
    Type: AWS::EC2::VPNGateway
    Properties:
      Type: ipsec.1
      Tags:
        - Key: Name
          Value: VPC/TheVPC
    Metadata:
      aws:cdk:path: VPC/TheVPC/VpnGateway
  TheVPCVPCVPNGW7C629261:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: TheVPC92636AB0
      VpnGatewayId:
        Ref: TheVPCVpnGateway97BC18B3
    Metadata:
      aws:cdk:path: VPC/TheVPC/VPCVPNGW
  TheVPCRoutePropagation577346C9:
    Type: AWS::EC2::VPNGatewayRoutePropagation
    Properties:
      RouteTableIds:
        - Ref: TheVPCApplicationSubnet1RouteTable0FE2A3D8
      VpnGatewayId:
        Ref: TheVPCVpnGateway97BC18B3
    DependsOn:
      - TheVPCVPCVPNGW7C629261
    Metadata:
      aws:cdk:path: VPC/TheVPC/RoutePropagation
  s3vpcendpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: com.amazonaws.us-east-1.s3
      VpcId:
        Ref: TheVPC92636AB0
      VpcEndpointType: Gateway
    Metadata:
      aws:cdk:path: VPC/s3_vpc_endpoint
  ecrvpcendpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: com.amazonaws.us-east-1.ecr.dkr
      VpcId:
        Ref: TheVPC92636AB0
      SubnetIds:
        - Ref: TheVPCApplicationSubnet1SubnetA74226FF
      VpcEndpointType: Interface
    Metadata:
      aws:cdk:path: VPC/ecr_vpc_endpoint
  ecsagentvpcendpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: com.amazonaws.us-east-1.ecs-agent
      VpcId:
        Ref: TheVPC92636AB0
      SubnetIds:
        - Ref: TheVPCApplicationSubnet1SubnetA74226FF
      VpcEndpointType: Interface
    Metadata:
      aws:cdk:path: VPC/ecs_agent_vpc_endpoint
  ecstelemetryvpcendpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: com.amazonaws.us-east-1.ecs-telemetry
      VpcId:
        Ref: TheVPC92636AB0
      SubnetIds:
        - Ref: TheVPCApplicationSubnet1SubnetA74226FF
      VpcEndpointType: Interface
    Metadata:
      aws:cdk:path: VPC/ecs_telemetry_vpc_endpoint
  ecsvpcendpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: com.amazonaws.us-east-1.ecs
      VpcId:
        Ref: TheVPC92636AB0
      SubnetIds:
        - Ref: TheVPCApplicationSubnet1SubnetA74226FF
      VpcEndpointType: Interface
    Metadata:
      aws:cdk:path: VPC/ecs_vpc_endpoint
  ccvpcendpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: com.amazonaws.us-east-1.git-codecommit
      VpcId:
        Ref: TheVPC92636AB0
      SubnetIds:
        - Ref: TheVPCApplicationSubnet1SubnetA74226FF
      VpcEndpointType: Interface
    Metadata:
      aws:cdk:path: VPC/cc_vpc_endpoint
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Modules: aws-cdk=0.29.0,@aws-cdk/assets=0.28.0,@aws-cdk/assets-docker=0.28.0,@aws-cdk/aws-apigateway=0.28.0,@aws-cdk/aws-applicationautoscaling=0.28.0,@aws-cdk/aws-autoscaling=0.28.0,@aws-cdk/aws-autoscaling-common=0.28.0,@aws-cdk/aws-certificatemanager=0.28.0,@aws-cdk/aws-cloudformation=0.28.0,@aws-cdk/aws-cloudwatch=0.28.0,@aws-cdk/aws-codedeploy-api=0.28.0,@aws-cdk/aws-ec2=0.28.0,@aws-cdk/aws-ecr=0.28.0,@aws-cdk/aws-ecs=0.28.0,@aws-cdk/aws-elasticloadbalancingv2=0.28.0,@aws-cdk/aws-even [...]
Outputs:
  TheVPCPublicSubnetIDs34A93164:
    Value:
      Ref: TheVPCPublicSubnet1Subnet770D4FF2
    Export:
      Name: VPC:TheVPCPublicSubnetIDs34A93164
  TheVPCPrivateSubnetIDsE53B48B1:
    Value:
      Ref: TheVPCApplicationSubnet1SubnetA74226FF
    Export:
      Name: VPC:TheVPCPrivateSubnetIDsE53B48B1
  TheVPCVpcIdD346CDBA:
    Value:
      Ref: TheVPC92636AB0
    Export:
      Name: VPC:TheVPCVpcIdD346CDBA
  TheVPCVpnGatewayId86251C09:
    Value:
      Ref: TheVPCVpnGateway97BC18B3
    Export:
      Name: VPC:TheVPCVpnGatewayId86251C09
